<resources>
    <string name="app_name">Dzialaj Lokalnie</string>
    <string name="facebook_app_id">867077646719945</string>

    <string name="title_section1">Zgłoszenia</string>
    <string name="title_section2">Mapa</string>
    <string name="title_section3">Wydarzenia</string>


    <string name="details_title_section1">Szczegóły</string>
    <string name="details_title_section2">Komentarze</string>
    <string name="details_title_section2_number">Komentarze (%d)</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Ustawienia</string>

    <string name="tags">Tagi: %s</string>

    <string name="title">Tytuł</string>
    <string name="description">Opis</string>
    <string name="new_issue">Nowe zgłoszenie</string>
    <string name="new_event">Nowe wydarzenie</string>
    <string name="next">Dalej</string>
    <string name="add_issue_step">Krok</string>
    <string name="back">Cofnij</string>
    <string name="warning_fill_title">Uzupełnij tytuł </string>
    <string name="warning_fill_description">Uzupełnij opis </string>
    <string name="warning_fill_date">Ustaw datę wydarzenia</string>
    <string name="warning_choose_category">Wybierz kategorię</string>
    <string name="warning_set_place">Kliknij na mapie i ustaw miejsce </string>
    <string name="warning_fill_name">Podaj swoje imię</string>
    <string name="warning_fill_surname">Podaj swoje nazwisko</string>
    <string name="warning_fill_email">Podaj prawidłowy adres email</string>
    <string name="warning_fill_password">Wymagane znaki: duża i mała litera, cyfra. 8-20 znaków</string>

    <string name="add">Dodaj</string>
    <string name="choose_category_info">Wybierz pasujące kategorie:</string>
    <string name="choose_place_info">Zaznacz miejsce na mapie, bądź wybierz dzielnice </string>
    <string name="choose_photo_info">Opcjonalnie dodaj zdjęcie </string>

    <string name="network_error">Problem z połączeniem internetowym</string>
    <string name="unauthorized_error">Musisz się zalogować</string>
    <string name="login_action">Zaloguj</string>
    <string name="forbidden_error">Nie mogę tego zrobić</string>
    <string name="not_found_error">Nie mogę tego znaleźć</string>
    <string name="server_error">Na serwerze wystąpił błąd.\nJuż sprawdzam co się stało</string>
    <string name="unknown_error">Coś poszło nie tak</string>
    <string name="action_filter">Filtruj</string>
    <string name="district_label">Dzielnica</string>
    <string name="categories_label">Kategorie</string>
    <string name="all_districts_filter">Cały Poznań</string>
    <string name="action_sort">Sortuj</string>
    <string name="action_sort_popular">Najpopularniejsze</string>
    <string name="action_sort_newest">Najnowsze</string>
    <string name="action_sort_top">Top</string>

    <string name="set_date">Ustaw datę</string>
    <string name="cancel">Anuluj</string>
    <string name="set">Ustaw</string>
    <string name="date">Data:</string>
    <string name="simple_date_format">dd MMM yyyy</string>
    <string name="simple_date_time_format">dd MMM yyyy HH:mm:ss</string>
    <string name="simple_time_format">HH:mm</string>
    <string name="facebook_event">Wydarzenie na Facebooku (opcjonalnie)</string>

    <string name="choose">Wybierz</string>
    <string name="from_gallery">Z galerii</string>
    <string name="take_photo">Nowe zdjęcie</string>
    <string name="edit_issue">Edycja zgłoszenia</string>
    <string name="edit_event">Edycja wydarzenia</string>

    <string name="empty_list">Lista jest pusta\nPrzeciągnij w dół aby odświeżyć\nlub ustaw inny Filtr</string>
    <string name="empty_comment_list">Brak komentarzy\n</string>

    <string name="title_activity_issue">Zgłoszenie</string>
    <string name="comment_hint">Dodaj komentarz...</string>
    <string name="response_hint">Odpowiedz...</string>
    <string name="action_refresh">Odśwież</string>
    <string name="choose_date_info">Wybierz datę lub zakres dat (od - do)</string>
    <string name="outside_city_warning">Miejsce poza miastem</string>
    <string name="skip">Pomiń</string>
    <string name="choose_image_info">Choose an image</string>
    <string name="added_event_success_info">Dodano nowe wydarzenie</string>
    <string name="added_issue_success_info">Dodano nowe zgłoszenie</string>
    <string name="api_communication_info">Komunikacja z API w toku</string>
    <string name="please_wait_info">Proszę czekać</string>

    <string name="surname">Nazwisko</string>
    <string name="name">Imię</string>
    <string name="email">Adres email</string>
    <string name="pass">Hasło</string>
    <string name="user_description">O sobie</string>
    <string name="sign_up">Rejestracja</string>
    <string name="info_select_live_distrcit">Zaznacz dzielnice w której mieszkasz:</string>
    <string name="register">Zarejestruj</string>

    <string name="quote">Cytuj</string>
    <string name="report">Zgłoś</string>
    <string name="solution">Rozwiązanie</string>

    <string name="register_cta">Nie masz konta? </string>
    <string name="register_cta2">  Zarejestruj się</string>
    <string name="or">LUB</string>
    <string name="login_label">Logowanie</string>
    <string name="login_success">Zalogowano</string>
    <string name="action_logout">Wyloguj</string>
    <string name="logout_success">Wylogowano</string>
    <string name="wrote_on_quote">%s napisał(a): \n</string>
    <string name="edit_user">Edycja profilu</string>
    <string name="save_user_edit">Zapisz</string>

    <string name="login_or_register">Zaloguj lub zarejestruj</string>
    <string name="warning_localization_dialogi_message">Jeśli nie podasz lokalizacji, rejestracja zostanie przerwana.</string>
    <string name="warning_localization_dialog_title">Przerwać rejestracje?</string>
    <string name="warning_localization_dialog_positive">Przerwij</string>
    <string name="warning_localization_dialog_negative">Dokończ</string>

    <string name="pref_key_push_notifications">pref_push_notifications</string>
    <string name="pref_key_email_notifications">pref_email_notifications</string>
    <string name="pref_title_push_notifications">Powiadomienia na telefon</string>
    <string name="pref_subtitle_push_notifications">Nowości, komentarze, wydarzenia</string>
    <string name="pref_title_email_notifications">Powiadomienia emailem</string>
    <string name="pref_subtitle_email_notifications">Nowości, komentarze, wydarzenia</string>
    <string name="action_about">O aplikacji</string>
    <string name="action_edit">Edytuj</string>
    <string name="date_end">Data zakończenia</string>
    <string name="date_start">Data rozpoczęcia</string>
    <string name="date_start_time">Godzina rozpoczęcia</string>
    <string name="date_end_time">Godzina zakończenia</string>
    <string name="warning_fill_date_after">Koniec wydarzenia powinien być później niż początek</string>

    <string name="warning_event_ended">To wydarzenie już minęło</string>
    <string name="warning_fill_date_before_now">Data wydarzenia już minęła</string>

    <string name="action_mail_feedback">Wyślij maila do autorów</string>
    <string name="clear">Wyczyść</string>


    <plurals name="votes">
        <item quantity="one">%d głos</item>
        <item quantity="few">%d głosy</item>
        <item quantity="other">%d głosów</item>
    </plurals>

    <plurals name="comments">
        <item quantity="one">%d komentarz</item>
        <item quantity="few">%d komentarze</item>
        <item quantity="other">%d komentarzy</item>
    </plurals>

    <plurals name="attending">
        <item quantity="one">%d weźmie udział</item>
        <item quantity="few">%d wezmą udział</item>
        <item quantity="other">%d weźmie udział</item>
    </plurals>

    <plurals name="maybe">
        <item quantity="one">%d może dołączy</item>
        <item quantity="few">%d może dołączą</item>
        <item quantity="other">%d może dołączy</item>
    </plurals>

    <plurals name="invited">
        <item quantity="one">%d zaproszona</item>
        <item quantity="few">%d zaproszone</item>
        <item quantity="other">%d zaproszonych</item>
    </plurals>

    <array name="participate_types">
        <item>Możesz wziąć udział klikając na ptaszka</item>
        <item>Weźmiesz udział</item>
        <item>Może weźmiesz udział</item>
        <item>Nie chcesz wziąć udziału</item>
        <item>Jesteś zaproszony</item>
        <item>Nie możesz wziąć udziału</item>
    </array>
</resources>
