<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="pl.snowdog.dzialajlokalnie.LoginActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_scrollFlags="scroll|enterAlways" />



    </android.support.design.widget.AppBarLayout>
    <RelativeLayout
        android:id="@+id/login_container"
        android:layout_below="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        >
        <android.support.design.widget.TextInputLayout
            android:id="@+id/etEmailWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:hint="@string/email" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etPasswordWrapper"
            android:layout_below="@id/etEmailWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true"

                android:hint="@string/pass" />

        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/btnLogin"
            android:layout_below="@+id/etPasswordWrapper"
            android:textColor="@color/colorAccent"
            android:text="@string/login_action"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle" />
        <RelativeLayout
            android:id="@+id/register_container"
            android:layout_below="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvRegisterCTA"

                android:text="@string/register_cta"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <Button
                android:id="@+id/btnRegister"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_toRightOf="@+id/tvRegisterCTA"
                android:textColor="@color/colorAccent"
                android:text="@string/register_cta2"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/orContainer"
            android:layout_below="@id/register_container"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/tvOr"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="?android:attr/dividerVertical" />
            <TextView
                android:id="@+id/tvOr"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_centerHorizontal="true"
                android:text="@string/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/tvOr"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/dividerVertical" />
        </RelativeLayout>
        <com.facebook.login.widget.LoginButton
            android:id="@+id/btnLoginFacebook"
            android:layout_below="@id/orContainer"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </RelativeLayout>

</RelativeLayout>
