<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AddIssueActivity">

    <RelativeLayout
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_above="@+id/lower_buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvDesc"
            android:text="@string/choose_photo_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/ivPreview"
            android:layout_below="@+id/tvDesc"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/sample_picture"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </RelativeLayout>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/fab"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/lower_buttons_container"
        android:layout_margin="@dimen/fab_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_behavior="pl.snowdog.dzialajlokalnie.view.FloatingActionsMenuBehavior"
        fab:fab_icon="@drawable/ic_action_camera"
        fab:fab_addButtonColorNormal="@color/colorAccent"
        fab:fab_addButtonColorPressed="@color/white_pressed"
        fab:fab_labelStyle="@style/menu_labels_style"
        fab:fab_labelsPosition="left"
        >

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_new_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_size="mini"
            app:fab_icon="@drawable/ic_action_camera"
            fab:fab_colorNormal="@color/white"
            fab:fab_title="@string/take_photo"
            fab:fab_colorPressed="@color/white_pressed"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/white"
            fab:fab_size="mini"
            app:fab_icon="@drawable/ic_photo_library_white_48dp"
            fab:fab_title="@string/from_gallery"
            fab:fab_colorPressed="@color/white_pressed"/>

    </com.getbase.floatingactionbutton.FloatingActionsMenu>
    <include
        android:id="@+id/lower_buttons_container"
        layout="@layout/include_lower_buttons_container" />
</RelativeLayout>
